front-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
      - name: front-container
        image: linae/movie-app:1
        imagePullPolicy: Always
---

apiVersion: v1
kind: Service
metadata:
  name: front-service
spec:
  ports:
  - name: http
    targetPort: 80
    port: 80
  selector:
    app: front

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: front-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: front.localhost
    http:
      paths:
      - path: /
        backend:
          serviceName: front-service
          servicePort: http
