gateway-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
      - name: gateway-container
        image: linae/gateway-service:1
        imagePullPolicy: Always
---

apiVersion: v1
kind: Service
metadata:
  name: gateway-service
spec:
  ports:
  - name: http
    targetPort: 8080
    port: 80
  selector:
    app: gateway

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: gateway.localhost
    http:
      paths:
      - path: /
        backend:
          serviceName: gateway-service
          servicePort: http
