registry-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry
  template:
    metadata:
      labels:
        app: registry
    spec:
      containers:
      - name: registry-container
        image: linae/registry-service:1
        imagePullPolicy: Always
---

apiVersion: v1
kind: Service
metadata:
  name: registry-service
spec:
  ports:
  - name: http
    targetPort: 8761
    port: 80
  selector:
    app: registry

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: registry-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: registry.localhost
    http:
      paths:
      - path: /
        backend:
          serviceName: registry-service
          servicePort: http
